Search results are now separated by types, still not as aesthetically pleasing as it should be

--- a/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
@@ -19,8 +19,8 @@
         </div>
     </section>
     <section class="hidden-phone groups">
-        <div class="panel panel-default" popover="Groups" popover-placement="right" popover-trigger="mouseenter">
-            <div class="panel-heading">
+        <div class="panel panel-default">
+            <div class="panel-heading" popover="Groups" popover-placement="right" popover-trigger="mouseenter">
                 <span class="glyphicon glyphicon-th-large"></span>
                 <span translate="tatami.home.sidebar.myGroups"></span>
             </div>
@@ -40,8 +40,8 @@
         </div>
     </section>
     <section class="hidden-phone tag-trends">
-        <div class="panel panel-default" popover="Tags" popover-placement="right" popover-trigger="mouseenter">
-            <div class="panel-heading">
+        <div class="panel panel-default">
+            <div class="panel-heading" popover="Tags" popover-placement="right" popover-trigger="mouseenter">
                 <span class="glyphicon glyphicon-fire"></span>
                 <span translate="tatami.home.sidebar.trends"></span>
             </div>
@@ -57,8 +57,8 @@
         </div>
     </section>
     <section class="hidden-phone who-to-follow">
-        <div class="panel panel-default" popover="Who to Follow" popover-placement="right" popover-trigger="mouseenter">
-            <div class="panel-heading">
+        <div class="panel panel-default">
+            <div class="panel-heading" popover="Who to Follow" popover-placement="right" popover-trigger="mouseenter">
                 <span class="glyphicon glyphicon-user"></span>
                 <span translate="tatami.home.sidebar.whoToFollow"></span>
             </div>
