--- a/src/main/webapp/app/shared/topMenu/SearchView.html
+++ b/src/main/webapp/app/shared/topMenu/SearchView.html
@@ -1,12 +1,30 @@
-<div>
+<!--
+<a>
+    <div ng-if="match.model.firstGroup">Groups</div>
     <div ng-if="match.model.groupId">
         {{match.model.name}}
     </div>
-
+    <div ng-if="match.model.firstUser">Users</div>
+    <div ng-if="match.model.login">
+        @{{match.model.username}}
+    </div>
+    <div ng-if="match.model.firstTag">Tags</div>
+    <div ng-if="!match.model.groupId && match.model.name">
+        #{{match.model.name}}
+    </div>
+</a>
+-->
+<div ng-if="match.model.firstGroup" class="category tags" class="icon-tags">Groups</div>
+<div ng-if="match.model.firstUser" class="icon-user">Users</div>
+<div ng-if="match.model.firstTag" class="icon-th-large">Tags</div>
+<a>
+    <div ng-if="match.model.groupId">
+        {{match.model.name}}
+    </div>
     <div ng-if="match.model.login">
         @{{match.model.username}}
     </div>
     <div ng-if="!match.model.groupId && match.model.name">
         #{{match.model.name}}
     </div>
-</div>
+</a>
