Add Pac4J security check - Redirects on successful Google Auth Fix html anchor

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -149,7 +149,7 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a ui-sref="tatami.account.files"
+                                <a ui-sref="tatami.account.files">
                                     <span class="glyphicon glyphicon-file"></span>
                                     <span translate="tatami.account.files.title"></span>
                                 </a>
