--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -145,6 +145,9 @@
     <!-- Profile View -->
     <script src="/app/components/home/profile/ProfileHeaderController.js"></script>
 
+    <!-- Status View -->
+    <script src="/app/components/home/status/StatusController.js"></script>
+
     <!-- List Views -->
     <script src="/app/shared/lists/status/StatusListController.js"></script>
     <script src="/app/shared/lists/user/UserListController.js"></script>
