--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -5,7 +5,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <!-- Change href to ui-sref that goes to 'home' which redirects to either login or /home/timeline -->
+        <!-- Change ui-sref that goes to root state -->
         <a class="navbar-brand" ui-sref="tatami.home.home.timeline">
             <img title="{{ 'tatami.home.menu.logo' | translate }}" src="/assets/img/company-logo.png">
             <span translate="tatami.home.menu.title"></span>
@@ -58,10 +58,10 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a translate="tatami.home.menu.about.language.en" href="?language=en"></a>
+                                    <a ng-click="changeLanguage('en')" translate="tatami.home.menu.about.language.en"></a>
                                 </li>
                                 <li>
-                                    <a translate="tatami.home.menu.about.language.fr" href="?language=fr"></a>
+                                    <a ng-click="changeLanguage('fr')" translate="tatami.home.menu.about.language.fr"></a>
                                 </li>
                             </ul>
                         </li>
