--- a/src/main/webapp/app/shared/lists/status/StatusListView.html
+++ b/src/main/webapp/app/shared/lists/status/StatusListView.html
@@ -2,7 +2,7 @@
     <section class="timeline" infinite-scroll="loadMore()" infinite-scroll-disabled="busy">
         <div class="tatams" ng-repeat="status in statuses">
             <div class="tatam pointer tatam-border-lr tatam-hover" style="display: block;">
-                <div ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
+                <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
                     <div ng-if="status.context" ng-class="{ 'favorite': status.context.favorite, 'share': status.context.shareByMe, 'both': status.context.favorite && status.context.shareByMe }">
                         <div class="pull-left background-image-fffix statusitem-img">
                             <a ui-sref="tatami.home.profile.statuses({ username: status.context.username })">
