--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,6 +79,8 @@
     <script src="/assets/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
     <script src="/assets/bower_components/angular-translate/angular-translate.js"></script>
+    <script src="/assets/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/assets/bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
 
     <script src="/assets/vendor/marked/marked.js"></script>
 
