Blog Link redirects based on language now

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -85,17 +85,17 @@
                             </a>
                         </li>
                         <li class="divider"></li>
+
                         <li>
                             <a href="http://www.ippon.fr" target="_blank">
                                 <span class="glyphicon glyphicon-exclamation-sign"></span>
-                                <span translate="tatami.home.menu.about.ippon.website"><span>
+                                <span translate="tatami.home.menu.about.ippon.website"></span>
                             </a>
                         </li>
-                        <li>
-                            <a href="http://blog.ippon.fr" target="_blank">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                <span translate="tatami.home.menu.about.ippon.blog"></span>
-                            </a>
+                        <li><a ng-click='goToBlog()'>
+                                    <span class="glyphicon glyphicon-pencil"></span>
+                                    <span translate="tatami.home.menu.about.ippon.blog"></span>
+                                </a>
                         </li>
                         <li>
                             <a href="https://twitter.com/ippontech" target="_blank">
