Fixed issue when refreshing public page while logged out

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -158,6 +158,7 @@
     <!-- Post New Status Modal -->
     <script src="/app/shared/topMenu/post/PostModule.js"></script>
     <script src="/app/shared/topMenu/post/PostController.js"></script>
+    <script src="/app/shared/topMenu/post/PostTypeahead.js"></script>
 
     <!-- Presentation Modal -->
     <script src="/app/components/home/welcome/WelcomeController.js"></script>
