--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,6 +92,7 @@
 
     <script src="/assets/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="/assets/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/assets/bower_components/ment.io/dist/mentio.js"></script>
 
     <script src="/assets/vendor/angular-animate/angular-animate.js"></script>
     <script src="/assets/bower_components/ngtoast/dist/ngToast.js"></script>
