--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -257,6 +257,7 @@
     <!-- Shared Filters -->
     <script src="/app/shared/filters/MarkdownFilter.js"></script>
     <script src="/app/shared/filters/EmoticonFilter.js"></script>
+    <script src="/app/shared/filters/PlaceholderFilter.js"></script>
 
     <!-- Shared Services -->
     <script src="/app/shared/services/HomeService.js"></script>
